# steves_notes

./: .gitignore  export_to_github.sh  install.sh  notes_mcp_pacakages.sh  run_tests.sh
audio_tagger/: pyproject.toml
audio_tagger/audio_tagger/: __init__.py  tagger.py
brainstorm/: pyproject.toml
brainstorm/brainstorm/: __init__.py  session.py
kokoro_client/: pyproject.toml
kokoro_client/kokoro_client/: __init__.py  client.py
kokoro_process/: pyproject.toml
kokoro_process/kokoro_process/: __init__.py  process.py
kokoro_server/: pyproject.toml
kokoro_server/kokoro_server/: server.py
litellm_process/: pyproject.toml
litellm_process/litellm_process/: __init__.py  exceptions.py  process.py  setup.py
litellm_process_tests/: pyproject.toml
litellm_process_tests/litellm_process_tests/active/: test_start.py  test_status.py  test_stop.py
litellm_process_tests/litellm_process_tests/debug/: hello.sh  kill.sh  starts.py  status.sh
litellm_process_tests/litellm_process_tests/lib/: base_test.py
note_iterator/: pyproject.toml
note_iterator/note_iterator/: __init__.py  iterator.py
notes_mcp/: pyproject.toml
notes_mcp/notes_mcp/: __init__.py  server.py
notes_mcp_tests/: pyproject.toml
notes_mcp_tests/notes_mcp_tests/active/: test_append_note_to_active_context.py  test_append_note_to_node.py  test_change_active_context_id.py  test_create_new_objective.py  test_get_next_note.py  test_new_iterator.py  test_rename_active_objective.py  test_show_visual_tree.py
notes_mcp_tests/notes_mcp_tests/debug/: llm_read_notes.py  read_notes.py  speak_notes.py
notes_mcp_tests/notes_mcp_tests/lib/: base_test.py
process_manager/: pyproject.toml
process_manager/process_manager/: __init__.py  exceptions.py  manager.py  state.py
process_manager_tests/: pyproject.toml
process_manager_tests/process_manager_tests/: __init__.py  test_process_manager.py
process_manager_tests/process_manager_tests/active/: test_persistence.py  test_persistence_readable_by_new_instance.py  test_persistence_stop_by_new_instance.py  test_process_state.py  test_restart.py  test_restart_gives_new_pid.py  test_restart_process_alive_after.py  test_restart_raises_if_never_started.py  test_start.py  test_start_already_running_no_restart.py  test_start_process_is_alive.py  test_start_ready_fn_timeout.py  test_start_ready_fn_true_immediately.py  test_start_returns_true.py  test_start_writes_state.py  test_state_all_names_empty.py  test_state_all_names_returns_all.py  test_state_clear_removes_file.py  test_state_clear_silent_when_missing.py  test_state_persistence.py  test_state_read_corrupt_file.py  test_state_read_missing.py  test_state_write_and_read.py  test_status.py  test_status_after_stop.py  test_status_not_running.py  test_status_running.py  test_stop.py  test_stop_all.py  test_stop_all_empty_is_silent.py  test_stop_all_stops_multiple.py  test_stop_already_dead_is_silent.py  test_stop_clears_state.py  test_stop_kills_process.py  test_stop_unknown_is_silent.py
process_manager_tests/process_manager_tests/lib/: base_test.py
process_manager_tests/process_manager_tests/visit/: list_tests.py  visit.py
steves_notes/: pyproject.toml
steves_notes/steves_notes/: __init__.py  model.py
test_utils/: pyproject.toml
test_utils/test_utils/: list_tests.py  visit.py
tests_context/: pyproject.toml  test_install.sh
tests_context/tests_context/: __init__.py  __main__.py  runner.py
thoughts/: pyproject.toml
thoughts/thoughts/: __init__.py  finesse.py  scrap.py  workspace.py
