[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "litellm_process_tests"
version = "0.1.0"
description = "Test suite for the litellm_process package"
requires-python = ">=3.11"
dependencies = [
    "litellm_process",
    "process_manager",
    "test_utils",
]

[tool.setuptools.packages.find]
include = ["litellm_process_tests*"]
